# company-sourcing-agent

./: .claude.json  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  fly.toml  index.html  pyproject.toml
.cache/claude-cli-nodejs/-tmp-bloom-task-303a033b-uc7v4zen/mcp-logs-bloom-reviewer/: 2026-04-09T04-47-02-502Z.jsonl
.cache/claude-cli-nodejs/-tmp-bloom-task-d6c8c5e7-j5f90tda/mcp-logs-bloom-reviewer/: 2026-04-09T04-49-11-750Z.jsonl
.claude/backups/: .claude.json.backup.1775710022504
.claude/plugins/: blocklist.json
.claude/projects/-tmp-bloom-task-303a033b-uc7v4zen/: 07e6e360-4f48-4032-a747-7d450c4e87d3.jsonl
.claude/projects/-tmp-bloom-task-303a033b-uc7v4zen/07e6e360-4f48-4032-a747-7d450c4e87d3/tool-results/: bxidppakh.txt
.claude/shell-snapshots/: snapshot-bash-1775710027448-xg6rdl.sh
alembic/: env.py
alembic/versions/: 1b3848e38506_initial_schema_companies_signals_scores.py  a2f7c3d81e9b_add_crawl_states_table.py
src/dashboard/: __init__.py  __main__.py  app.py  cli.py  ui.py
src/db/: session.py
src/extraction/: company_extractor.py
src/google/: __init__.py  cli.py  client.py  config.py  monitor.py  parser.py
src/hn/: cli.py  client.py  monitor.py
src/models/: __init__.py  base.py  company.py  crawl_state.py  score.py  signal.py
src/scoring/: __init__.py  engine.py
src/sources/: cli.py  config.py  monitor.py  parser.py  twitter_api.py  twitter_scraper.py
tests/: conftest.py  test_company_extractor.py  test_dashboard.py  test_google_client.py  test_google_monitor.py  test_google_parser.py  test_hn_client.py  test_hn_monitor.py  test_models.py  test_monitor.py  test_parser.py  test_scoring.py
