[project]
name = "company-sourcing-agent"
version = "0.1.0"
description = "An agent that discovers and tracks promising companies for investment"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9,<3.0"]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<6.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
