[project]
name = "company-sourcing-agent"
version = "0.1.0"
description = "An agent that discovers and tracks promising companies for investment"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9,<3.0"]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<6.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
